fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1311,6 +1311,8 @@ input, select, textarea {
 		background-size: cover;
 		background-attachment: fixed;
 		overflow-y: scroll;
+		margin: 0;
+		padding: 0;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
